# Letter

./: .gitignore  Letter.cabal  Letter.gram  README.md  stack.yaml
C++/: .gitignore  README.md
C++/Letter.xcodeproj/: project.pbxproj
C++/Letter.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
C++/Letter.xcworkspace/: contents.xcworkspacedata
C++/src/: Driver.cpp  Driver.hpp  Exp.hpp  Func.cpp  Func.hpp  IRGenerator.cpp  IRGenerator.hpp  Parser.hpp  main.cpp
CPP/: Makefile  README.md
CPP/Letter/: Analyzer.cpp  Analyzer.hpp  Env.cpp  Env.hpp  Exp.cpp  Exp.hpp  Func.cpp  Func.hpp  IRGenerator.cpp  IRGenerator.hpp  LetterJIT.h  Parser.cpp  Parser.hpp  main.cpp
CPP/Letter.xcodeproj/: project.pbxproj
CPP/src/: Exp.cpp  Exp.hpp  Func.cpp  Func.hpp  IRGenerator.cpp  IRGenerator.hpp  Parser.cpp  Parser.hpp  main.cpp
Docs/: Letter.gram  Semantics.txt
Haskell/: Letter.cabal  README.md  stack.yaml
Haskell/app/: Main.hs
Haskell/app/REPL/: Core.hs
Haskell/src/Letter/: Analyzer.hs  Core.hs  Optimizer.hs
app/: Main.hs
app/REPL/: Core.hs  Parser.hs
src/Letter/: Core.hs  InitialBasis.hs  Parser.hs  initial-basis.ltr
src/Letter/Compiler/: Core.hs  LLVM.hs
